[gd_scene load_steps=8 format=3 uid="uid://dg4rucq17ibr1"]

[ext_resource type="AudioStream" uid="uid://cmk8wctvrg502" path="res://sfx/Dog Bark 1.wav" id="1_dxrbl"]
[ext_resource type="Script" path="res://scenes/sounds.gd" id="1_hyhon"]
[ext_resource type="AudioStream" uid="uid://dnjx0a7brc664" path="res://sfx/Dog Bark 3.wav" id="3_bfg3i"]
[ext_resource type="AudioStream" uid="uid://bh845xhjfwoa2" path="res://sfx/Dog Bark 2.mp3" id="3_m2yis"]
[ext_resource type="AudioStream" uid="uid://cphh3abc6bk6v" path="res://sfx/Meow 1.wav" id="4_lhi78"]
[ext_resource type="AudioStream" uid="uid://dbpgvcdnktbgy" path="res://sfx/Meow 2.ogg" id="5_cu5hp"]
[ext_resource type="AudioStream" uid="uid://dfp7so5oi66jv" path="res://sfx/Meow 3.mp3" id="6_4uk24"]

[node name="Sounds" type="Node2D"]
script = ExtResource("1_hyhon")

[node name="Jump1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1_dxrbl")

[node name="Jump2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_m2yis")

[node name="Jump3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_bfg3i")

[node name="Die1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_lhi78")

[node name="Die2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_cu5hp")

[node name="Die3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_4uk24")
